feat: 멤버 활동기록 개편